# bank_widget_project

./: .coverage  .env  .flake8  .gitignore  README.md  main.py  pyproject.toml
src/: category_counter.py  decorators.py  external_api.py  file_readers.py  generators.py  masks.py  processing.py  search.py  utils.py  widget.py
tests/: test_decorators.py  test_file_readers.py  test_generators.py  test_masks.py  test_processing.py  test_search_and_categories.py  test_utils.py  test_widget.py  tests_external_api.py
