[tool.poetry]
name = "bank-widget-project"
version = "0.1.0"
description = ""
authors = ["Viktor Karateev <karateev.92@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
# Exclude the .git, .venv, and __pycache__ directories.
(/\.git|\.venv|__pycache__)
'''

[tool.isort]
profile = "black"
line_length = 119
known_third_party = ["flask", "pytest"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"


